--- a/src/lib/i18n/ae.json
+++ b/src/lib/i18n/ae.json
@@ -46,6 +46,20 @@
       "submit": "سجل الآن <strong>مجانًا</strong>",
       "privacy": "سيتم التعامل مع بياناتك بسرية. يمكنك إلغاء الاشتراك في أي وقت."
     },
+    "callbackForm": {
+    "switchButton": "طلب معاودة اتصال مجانية",
+    "backToEmail": "العودة إلى نموذج البريد الإلكتروني",
+    "name": "الاسم",
+    "namePlaceholder": "الاسم الأول والأخير",
+    "phone": "رقم الهاتف",
+    "phonePlaceholder": "رقم هاتفك",
+    "submit": "طلب معاودة اتصال <strong>مجانًا</strong>",
+    "privacy": "سيتم التعامل مع بياناتك بسرية. يمكنك إلغاء الاشتراك في أي وقت."
+  },
+  "successMessages": {
+  "email": "شكرًا! سنرد عليك في أقرب وقت ممكن.",
+  "callback": "شكرًا! سنعاود الاتصال بك في أقرب وقت ممكن."
+},
     "timeline": {
       "step1": {
         "title": "سنتحدث معك لمدة 30 دقيقة.",
