--- a/src/lib/i18n/ru.json
+++ b/src/lib/i18n/ru.json
@@ -46,6 +46,20 @@
       "submit": "Зарегистрироваться <strong>бесплатно</strong> сейчас",
       "privacy": "Ваши данные будут обрабатываться конфиденциально. Вы можете отписаться в любое время."
     },
+    "callbackForm": {
+      "switchButton": "Запросить бесплатный обратный звонок",
+      "backToEmail": "Вернуться к форме электронной почты",
+      "name": "Имя",
+      "namePlaceholder": "Имя и фамилия",
+      "phone": "Номер телефона",
+      "phonePlaceholder": "Ваш номер телефона",
+      "submit": "Запросить обратный звонок <strong>бесплатно</strong>",
+      "privacy": "Ваши данные будут обрабатываться конфиденциально. Вы можете отписаться в любое время."
+    },
+    "successMessages": {
+  "email": "Спасибо! Мы свяжемся с вами в ближайшее время.",
+  "callback": "Спасибо! Мы перезвоним вам в ближайшее время."
+},
     "timeline": {
       "step1": {
         "title": "Мы поговорим с вами 30 минут.",
