--- a/src/lib/i18n/ae.json
+++ b/src/lib/i18n/ae.json
@@ -60,6 +60,9 @@
   "email": "شكرًا! سنرد عليك في أقرب وقت ممكن.",
   "callback": "شكرًا! سنعاود الاتصال بك في أقرب وقت ممكن."
 },
+"errorMessages": {
+  "callback": "الاسم أو رقم الهاتف غير صالح."
+},
     "timeline": {
       "step1": {
         "title": "سنتحدث معك لمدة 30 دقيقة.",
